<resources>
    <string name="app_name">YINApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="today_recommended">今日推荐</string>
    <string name="type_browse">分类浏览</string>
    <string name="female_welfare">妹子福利</string>
    <string name="my_collect">我的收藏</string>
    <string name="set_theme">主题</string>
    <string name="about_app">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
