<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tuijian"
            android:icon="@mipmap/navigation_tuijian"
            android:title="@string/today_recommended" />
        <item
            android:id="@+id/nav_all"
            android:icon="@mipmap/navigation_all"
            android:title="@string/type_browse"/>
        <item
            android:id="@+id/nav_meizi"
            android:icon="@mipmap/navigation_meizi"
            android:title="@string/female_welfare" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@mipmap/navigation_collect"
            android:title="@string/my_collect" />
    </group>

    <item android:title="Gank">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@mipmap/icon_theme"
                android:title="@string/set_theme" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/icon_about"
                android:title="@string/about_app" />
        </menu>
    </item>

</menu>
